# jan-incub-agents

attachments-agent/: .env.example  README.md  chunk_service.py  demo.py  document_agents.py  llm_wrapper.py  load_dataset.py  map_time_tradeoff_plot.py  processors.py  pyproject.toml  retrieval_eval.py  spec.md  utils.py  web_demo.py
attachments-agent/config/: bge_m3_400.yaml  bge_m3_400_ce_marco.yaml  bge_m3_400_ce_qwen.yaml  bm25_200.yaml  bm25_400.yaml  bm25_400_ce_marco.yaml  bm25_400_docling.yaml  bm25_400_marker.yaml  bm25_400_markitdown.yaml  comprehensive_evaluation_suite.yaml  evaluation_suite.yaml  instruct_gemma_400.yaml  instruct_qwen_400.yaml  instruct_qwen_800.yaml  instruct_qwen_ce_marco.yaml  multilingual_e5_large_400.yaml  qwen_scaling_focused.yaml  snowflake_arctic_embed_l_400.yaml  st_gemma_400.yaml  st_gemma_400_docling.yaml  st_gemma_400_marker.yaml  st_minilm_400.yaml  st_minilm_400_ce_marco.yaml  st_qwen0_6b_400_ce_qwen4b.yaml  st_qwen0_6b_400_ce_qwen8b.yaml  st_qwen4b_400.yaml  st_qwen4b_400_ce_qwen0_6b.yaml  st_qwen4b_400_ce_qwen4b.yaml  st_qwen4b_400_ce_qwen4b_docling.yaml  st_qwen4b_400_ce_qwen4b_markitdown.yaml  st_qwen4b_400_docling.yaml  st_qwen4b_400_marker.yaml  st_qwen4b_400_markitdown.yaml  st_qwen8b_400.yaml  st_qwen8b_400_ce_qwen0_6b.yaml  st_qwen8b_400_ce_qwen8b.yaml  st_qwen8b_400_ce_qwen8b_docling.yaml  st_qwen8b_400_ce_qwen8b_markitdown.yaml  st_qwen8b_400_docling.yaml  st_qwen8b_400_marker.yaml  (+10 more)
attachments-agent/poc/: README.md  bge_m3_400.yaml  main.py  start_server.sh
attachments-agent/poc_document_retrieval/: README.md  (+2 more)
(+17 files in other folders)
