[project]
name = "attachments-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "PyPDF2>=3.0.0",
    "tiktoken",
    "sentence-transformers",
    "scikit-learn",
    "torch",
    "markitdown[pdf]",
    "docling",
    "pytest",
    "black",
    "flake8",
    "datasets>=4.1.0",
    "numpy>=2.3.3",
    "huggingface-hub>=0.35.0",
    "json-repair",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "plotly>=6.3.0",
    "marker-pdf>=1.10.0",
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.20",
]
